# cpp.library.encoding

./: .gitignore  .travis.yml  CMakeLists.txt  data_gb18030.txt  data_utf16le.txt  data_utf8.txt  encoding.h  main.cpp  posix_encoding.cpp  posix_encoding.h  readme.md  run.bat  run.sh  std_wrapper_encoding.h  u16string_bytes.cpp  u16string_bytes.h  windows_encoding.h
encoding/: CMakeLists.txt  encoding.h  encoding_posix.cpp  encoding_posix.h  encoding_std.h  encoding_win.cpp  encoding_win.h
include/encoding/: encoding.h  encoding_std.h  hresult.h  u16string_bytes.h
src/: encoding.c  encoding.cpp  encoding_posix.c  encoding_posix.cpp  encoding_posix.h  encoding_std.cpp  encoding_win.c  encoding_win.cpp  encoding_win.h  u16string_bytes.cpp
tests/: CMakeLists.txt  main.cpp  run.bat  run.sh  testencoding
